--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -60,10 +60,13 @@ services:
     volumes:
       # UNCOMMENT FOR PERSISTANT WWW DATA
       - "${CONTAINERDATA}/${PROJECT_NAME}/data:/home/data"
-      - "../magento247:/var/www"
+      - "../magento247:/var/www:rw"
       - "./ubuntu/magento247-build/bin/install-magento:/usr/local/bin/install-magento"
       - "./ubuntu/magento247-build/bin/install-sampledata:/usr/local/bin/install-sampledata"
       - "./ubuntu/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini"
+      # prevent recursive binding volumes
+      - "./../..:/var/www/plugin"
+      - "/var/www/plugin/infra/"
     networks:
       - database
       - wwwserver
@@ -176,11 +179,13 @@ services:
     hostname: mysql
     domainname: "${APPDOMAIN}"
     platform: linux/arm64
+    expose:
+      - 3306
     ports:
       - '3308:3306'
     volumes:
       # UNCOMMENT FOR PERSISTANT DB DATA
-      #- "${CONTAINERDATA}/${PROJECT_NAME}/mysql:/var/lib/mysql"
+      - "${CONTAINERDATA}/${PROJECT_NAME}/mysql:/var/lib/mysql"
       - "${CONTAINERDATA}/${PROJECT_NAME}/data:/home/data"
     networks:
       - database
