--- a/infra/docker/ubuntu/Dockerfile_infra
+++ b/infra/docker/ubuntu/Dockerfile_infra
@@ -3,6 +3,11 @@ LABEL maintainer "paj@gaiterjones.com"
 LABEL service "Magento 2 PHP-APACHE Service"
 # ------------------------------------------------------------------
 
+COPY ../../magento247 /var/www
+COPY ./magento247-build/bin/install-magento /usr/local/bin/install-magento
+COPY ./magento247-build/bin/install-sampledata /usr/local/bin/install-sampledata
+COPY ./xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+
 # configs
 #
 COPY ./php/php.ini /usr/local/etc/php/conf.d/php.ini
