--- a/infra/magento247/Dockerfile_infra
+++ b/infra/magento247/Dockerfile_infra
@@ -3,15 +3,17 @@ LABEL maintainer "paj@gaiterjones.com"
 LABEL service "Magento 2 PHP-APACHE Service"
 # ------------------------------------------------------------------
 
-COPY ../../magento247 /var/www
-COPY ./magento247-build/bin/install-magento /usr/local/bin/install-magento
-COPY ./magento247-build/bin/install-sampledata /usr/local/bin/install-sampledata
-COPY ./xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+COPY ./magento247 /var/www
+RUN chmod +wr /var/www
+
+COPY ./docker/ubuntu/magento247-build/bin/install-magento /usr/local/bin/install-magento
+COPY ./docker/ubuntu/magento247-build/bin/install-sampledata /usr/local/bin/install-sampledata
+COPY ./docker/ubuntu/xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 # configs
 #
-COPY ./php/php.ini /usr/local/etc/php/conf.d/php.ini
-COPY ./phpRedisAdmin_config.inc.php /var/www/dev/phpRedisAdmin/includes/config.inc.php
+COPY ./docker/ubuntu/php/php.ini /usr/local/etc/php/conf.d/php.ini
+COPY ./docker/ubuntu/phpRedisAdmin_config.inc.php /var/www/dev/phpRedisAdmin/includes/config.inc.php
 
 # Magento repo auth config
 #
@@ -24,7 +26,7 @@ RUN set -x \
 
 # msmtprc smtp config
 #
-COPY ./php/msmtprc /usr/local/etc/msmtprc
+COPY ./docker/ubuntu/php/msmtprc /usr/local/etc/msmtprc
 ARG APPDOMAIN
 ARG SMTP
 RUN set -x \
@@ -32,9 +34,9 @@ RUN set -x \
 	&& sed -i "s/XMAILDOMAINX/$APPDOMAIN/g" /usr/local/etc/msmtprc \
 	&& cat /usr/local/etc/msmtprc
 
-COPY ./apache/apache2.conf /etc/apache2/apache2.conf
-COPY ./apache/000-default.conf /etc/apache2/sites-available/000-default.conf
-COPY ./apache/remoteip.conf /etc/apache2/conf-available/remoteip.conf
+COPY ./docker/ubuntu/apache/apache2.conf /etc/apache2/apache2.conf
+COPY ./docker/ubuntu/apache/000-default.conf /etc/apache2/sites-available/000-default.conf
+COPY ./docker/ubuntu/apache/remoteip.conf /etc/apache2/conf-available/remoteip.conf
 # enable mods and sites
 #
 RUN a2enmod rewrite \
@@ -55,7 +57,7 @@ RUN export PATH=$PATH:/var/www/dev/magento2/bin
 
 # cron job
 #
-ADD crontab /etc/cron.d/magento2-cron
+ADD ./docker/ubuntu/crontab /etc/cron.d/magento2-cron
 RUN chmod 0644 /etc/cron.d/magento2-cron
 RUN crontab -u magento /etc/cron.d/magento2-cron
 
@@ -65,7 +67,7 @@ WORKDIR /var/www/dev/magento2
 #
 ARG GITLAB_USERNAME
 ARG GITLAB_TOKEN
-RUN composer config gitlab-token.git.nfq.asia ${GITLAB_USERNAME} ${GITLAB_TOKEN}
+RUN composer config --global http-basic.git.nfq.asia ${GITLAB_USERNAME} ${GITLAB_TOKEN}
 RUN git config --global --add safe.directory /var/www/html/vendor/twint-ch/twint-sdk
-
+RUN rm composer.lock
 RUN composer install
