Add ServerName configuration

--- a/zinfra/docker/ubuntu/apache/000-default.conf
+++ b/zinfra/docker/ubuntu/apache/000-default.conf
@@ -3,6 +3,8 @@
 #
 #
 <VirtualHost *:80>
+	ServerName twint-magento247.dev.nfq-asia.com
+  	ServerAlias twint-magento247.dev.nfq-asia.com
 
 	DocumentRoot /var/www/dev/magento2/pub
 	RemoteIPHeader X-Forwarded-For
@@ -23,7 +25,7 @@
 	</Directory>
 
 	<Directory /var/www/dev>
-	 Options -Indexes +Multiviews +FollowSymLinks
+	 	Options -Indexes +Multiviews +FollowSymLinks
 		AllowOverride All
 		Require all granted
 	</Directory>
