--- a/infra/magento247/Dockerfile
+++ b/infra/magento247/Dockerfile
@@ -125,4 +125,7 @@ RUN rm -rf /var/www/html/var/page_cache
 RUN rm -rf /var/www/html/var/session
 
 COPY --chown=www-data app/etc/env.docker.php app/etc/env.php
+COPY --chown=www-data mount-folders.sh mount-folders.sh
+COPY --chown=www-data mount-folders.txt mount-folders.txt
+
 RUN composer install
