--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ stages:
 
 test:
   only:
-    - dev/init
+    - merge_requests
   extends: .base
   stage: check
   parallel:
@@ -43,11 +43,18 @@ test:
     - composer config --global http-basic.repo.magento.com $MAGENTO_PUBLIC $MAGENTO_PRIVATE
     - composer config --global gitlab-token.git.nfq.asia $GITLAB_ACCESS_TOKEN
     
+    # check coding standard
+    - |
+      rm -f composer.lock
+      composer config prefer-stable true
+      composer config minimum-stability dev
+      composer install --prefer-dist --no-progress --no-interaction
+      ./vendor/bin/ecs --no-progress-bar
+    
     # Checkout Magento production template
     - composer create-project --repository-url=https://repo.magento.com/ magento/project-community-edition=$MAGENTO_VERSION magento
     - cd magento
     - |
-      composer config --global gitlab-token.git.nfq.asia $GITLAB_ACCESS_TOKEN
       composer config prefer-stable true
       composer config minimum-stability dev
       composer config repositories.twint-sdk vcs https://git.nfq.asia/twint-ag/php-sdk.git
@@ -66,20 +73,11 @@ test:
       
     - bin/magento setup:install --base-url=http://ci.magento.com --backend-frontname=admin --language=en_GB --timezone=Europe/Berlin --currency=CHF --db-host=mysql --db-name=$MYSQL_DATABASE --db-user=root --db-password=$MYSQL_ROOT_PASSWORD --use-secure=0 --base-url-secure=0 --use-secure-admin=0 --admin-firstname=First --admin-lastname=Last --admin-email=admin@magento.com --admin-user=admin --admin-password=passw0rd --search-engine=elasticsearch7 --elasticsearch-enable-auth=1 --elasticsearch-host=http://elasticsearch --elasticsearch-username=elastic --elasticsearch-password=e_password  --elasticsearch-index-prefix=magento2
     - |
-      ls -al vendor/twint
       bin/magento cache:clean
       bin/magento cache:flush
-      bin/magento module:status
       
-    - bin/magento module:enable Twint_Core
+    - bin/magento module:enable Twint_Magento
     - bin/magento setup:install
-
-#    - |
-#      rm -f composer.lock
-#      composer config prefer-stable true
-#      composer config minimum-stability dev
-#      composer install --prefer-dist --no-progress --no-interaction
-#    - ./vendor/bin/ecs --no-progress-bar
 
   cache:
     key: $CI_COMMIT_REF_SLUG-${CI_JOB_NAME}
