--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,14 @@ test:
   stage: check
   parallel:
     matrix:
-      - MAGENTO_VERSION: ["2.4.4", "2.4.5", "2.4.6", "2.4.7" ]
-        PHP_VERSION: ["8.1", "8.2", "8.3" ]
+      - MAGENTO_VERSION: ["2.4.4"]
+        PHP_VERSION: ["8.1"]
+      - MAGENTO_VERSION: ["2.4.5"]
+        PHP_VERSION: [ "8.1"]
+      - MAGENTO_VERSION: ["2.4.6" ]
+        PHP_VERSION: [ "8.1", "8.2" ]
+      - MAGENTO_VERSION: [ "2.4.7" ]
+        PHP_VERSION: [ "8.1", "8.2", "8.3" ]
   services:
     - mysql:8.0
     - name: elasticsearch:7.17.22
@@ -63,6 +69,9 @@ test:
     - |
       rm -f composer.lock
       composer install --prefer-dist --no-progress --no-interaction
+    
+    # Remove zinfra folder to avoid issue during di compile
+    - rm -rf vendor/twint/magento-2/zinfra
   
     # Make sure elastic search is ready
     - |
@@ -84,30 +93,3 @@ test:
     key: $CI_COMMIT_REF_SLUG-${CI_JOB_NAME}
     paths:
       - $CI_PROJECT_DIR/.gitlab-ci-cache
-
-test2:
-  only:
-    - dev/init-2
-  extends: .base
-  stage: check
-  parallel:
-    matrix:
-      - MAGENTO_VERSION: [ "2.4.7" ]
-        PHP_VERSION: ["8.3" ]
-  services:
-    - mysql:8.0
-    - name: elasticsearch:7.17.22
-      alias: elasticsearch
-      command: [ "elasticsearch", "-Expack.security.enabled=false", "-Ediscovery.type=single-node", "-Expack.license.self_generated.type=basic" ]
-  variables:
-    ELASTIC_PASSWORD: e_password
-    ES_JAVA_OPTS: "-Xms512m -Xmx512m"
-  
-  script:
-    - |
-      until curl -s -X GET "http://elasticsearch:9200/_cluster/health" > /dev/null; do
-        echo 'Waiting for Elasticsearch to be ready...'
-        sleep 5
-      done
-    - curl -u elastic:e_password -X GET "http://elasticsearch:9200/_cluster/health?pretty"
-
