--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ test:
     
     # Checkout Magento Community template, and change working directory to magento root folder
     - composer create-project --repository-url=https://repo.magento.com/ magento/project-community-edition=$MAGENTO_VERSION magento
-      cd magento
+    - cd magento
     
     - |
       composer config prefer-stable true
@@ -83,7 +83,13 @@ test:
         sleep 5
       done
       
-    - bin/magento setup:install --base-url=http://ci.magento.com --backend-frontname=admin --language=en_GB --timezone=Europe/Berlin --currency=CHF --db-host=mysql --db-name=$MYSQL_DATABASE --db-user=root --db-password=$MYSQL_ROOT_PASSWORD --use-secure=0 --base-url-secure=0 --use-secure-admin=0 --admin-firstname=First --admin-lastname=Last --admin-email=admin@magento.com --admin-user=admin --admin-password=passw0rd --search-engine=elasticsearch7 --elasticsearch-enable-auth=1 --elasticsearch-host=http://elasticsearch --elasticsearch-username=elastic --elasticsearch-password=e_password  --elasticsearch-index-prefix=magento2 > /dev/null
+    - bin/magento setup:install --base-url=http://ci.magento.com --backend-frontname=admin --language=en_GB --timezone=Europe/Berlin
+      --currency=CHF --db-host=mysql --db-name=$MYSQL_DATABASE --db-user=root --db-password=$MYSQL_ROOT_PASSWORD --use-secure=0
+      --base-url-secure=0 --use-secure-admin=0 --admin-firstname=First --admin-lastname=Last --admin-email=admin@magento.com
+      --admin-user=admin --admin-password=passw0rd --search-engine=elasticsearch7 --elasticsearch-enable-auth=1
+      --elasticsearch-host=http://elasticsearch --elasticsearch-username=elastic --elasticsearch-password=e_password
+      --elasticsearch-index-prefix=magento2 > /dev/null
+    
     - |
       bin/magento cache:clean > /dev/null
       bin/magento cache:flush > /dev/null
