--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": ">=8.1",
         "magento/framework": ">=103.0.4",
-        "twint-ch/twint-sdk": "dev-dev/magento"
+        "twint-ch/twint-sdk": "dev-develop"
     },
     "require-dev": {
         "symplify/easy-coding-standard": "^12.1",
