--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ test:
       - MAGENTO_VERSION: ["2.4.4"]
         PHP_VERSION: ["8.1"]
       - MAGENTO_VERSION: ["2.4.5"]
-        PHP_VERSION: [ "8.1"]
+        PHP_VERSION: [ "8.1", "8.2"]
       - MAGENTO_VERSION: ["2.4.6" ]
         PHP_VERSION: [ "8.1", "8.2" ]
       - MAGENTO_VERSION: [ "2.4.7" ]
@@ -59,8 +59,12 @@ test:
     # Run coding standard
     - ./vendor/bin/ecs --no-progress-bar
     
+    # Check codes by rector
+    - vendor/bin/rector process --dry-run
+    
     # Checkout Magento Community template, and change working directory to magento root folder
-    - composer create-project --repository-url=https://repo.magento.com/ magento/project-community-edition=$MAGENTO_VERSION magento
+    - composer create-project --repository-url=https://repo.magento.com/
+      magento/project-community-edition=$MAGENTO_VERSION magento > /dev/null
     - cd magento
     
     - |
