--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     },
     "require-dev": {
         "symplify/easy-coding-standard": "^12.1",
-        "slevomat/coding-standard": "^8.15"
+        "slevomat/coding-standard": "^8.15",
+        "rector/rector": "^1.2"
     },
     "repositories": [
         {
