--- a/infra/magento247/composer.json
+++ b/infra/magento247/composer.json
@@ -43,7 +43,8 @@
         "magento/module-widget-sample-data": "100.4.*",
         "magento/module-wishlist-sample-data": "100.4.*",
         "magento/product-community-edition": "2.4.7",
-        "magento/sample-data-media": "100.4.*"
+        "magento/sample-data-media": "100.4.*",
+        "twint/magento-2": "dev-master"
     },
     "autoload": {
         "exclude-from-classmap": [
@@ -102,6 +103,10 @@
         {
             "type": "vcs",
             "url": "https://git.nfq.asia/twint-ag/php-sdk.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://git.nfq.asia/twint-ag/magento-extension.git"
         }
     ],
     "extra": {
