--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require-dev": {
         "symplify/easy-coding-standard": "^12.1",
         "slevomat/coding-standard": "^8.15",
-        "rector/rector": "^1.2"
+        "rector/rector": "^1.2",
+        "phpspec/prophecy-phpunit": "^2.2"
     },
     "repositories": [
         {
