add crontab to server

--- a/infra/magento247/Dockerfile
+++ b/infra/magento247/Dockerfile
@@ -4,6 +4,8 @@ ENV COMPOSER_HOME=/tmp/composer
 
 RUN apt-get update && apt-get install -y --no-install-recommends gnupg \
     vim \
+    cron \
+    top \
     git \
     nginx \
     netcat-openbsd \
