--- a/infra/magento247/composer.json
+++ b/infra/magento247/composer.json
@@ -44,6 +44,7 @@
         "magento/module-wishlist-sample-data": "100.4.*",
         "magento/product-community-edition": "2.4.7",
         "magento/sample-data-media": "100.4.*",
+        "magefan/theme-frontend-optimized": "^2.0",
         "twint/magento-2": "dev-master"
     },
     "autoload": {
