--- a/infra/magento247/Dockerfile
+++ b/infra/magento247/Dockerfile
@@ -117,7 +117,8 @@ ENV MAGE_MODE=production
 RUN composer dump-autoload \
         --optimize \
         --apcu
-
+RUN rm -rf /var/www/html/vendor/twint/magento-2/zinfra
+RUN php -d memory_limit=2G bin/magento setup:di:compile
 RUN rm -rf /var/www/html/var/cache
 RUN rm -rf /var/www/html/var/page_cache
 RUN rm -rf /var/www/html/var/session
