--- a/infra/magento247/composer.json
+++ b/infra/magento247/composer.json
@@ -45,7 +45,8 @@
         "magento/product-community-edition": "2.4.7",
         "magento/sample-data-media": "100.4.*",
         "magefan/theme-frontend-optimized": "^2.0",
-        "twint/magento-2": "dev-master"
+        "twint/magento-2": "dev-master",
+        "mageplaza/magento-2-german-language-pack": "dev-master"
     },
     "autoload": {
         "exclude-from-classmap": [
