--- a/infra/magento247/etc/supervisord.conf
+++ b/infra/magento247/etc/supervisord.conf
@@ -33,3 +33,10 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=false
 startretries=0
+
+[program:cron]
+command=/usr/sbin/cron -f
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/cron.log
+stderr_logfile=/var/log/cron.err
