--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,15 +70,14 @@ test:
     - |
       composer config prefer-stable true
       composer config minimum-stability dev
-      composer config repositories.twint-sdk vcs https://git.nfq.asia/twint-ag/php-sdk.git
-      composer config repositories.twint-extension vcs git@git.nfq.asia:twint-ag/magento-extension.git
-    - composer require twint/magento-2:dev-$CI_COMMIT_REF_NAME --no-update
+      composer config repositories.twint-extension vcs git@git.nfq.asia:twint-ag/twint-magento-extension.git
+    - composer require twint-ag/twint-magento-extension:dev-$CI_COMMIT_REF_NAME --no-update
     - |
       rm -f composer.lock
       composer install --prefer-dist --no-progress --no-interaction
     
     # Remove zinfra folder to avoid issue during di compile
-    - rm -rf vendor/twint/magento-2/zinfra
+    - rm -rf vendor/twint-ag/twint-magento-extension/zinfra
   
     # Make sure elastic search is ready
     - |
