--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   "require": {
     "php": ">=8.1",
     "magento/framework": ">=103.0.4",
-    "twint-ag/sdk": "dev-develop"
+    "twint-ag/sdk": "^1.0"
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^12.1",
