--- a/zinfra/magento247/composer.json
+++ b/zinfra/magento247/composer.json
@@ -71,6 +71,7 @@
         "lusitanian/oauth": "^0.8",
         "magento/magento-coding-standard": "*",
         "magento/magento2-functional-testing-framework": "^4.7",
+        "mockery/mockery": "^1.6",
         "pdepend/pdepend": "^2.10",
         "phpmd/phpmd": "^2.12",
         "phpstan/phpstan": "^1.9",
