Config git repository for php-sdk

--- a/infra/magento247/composer.json
+++ b/infra/magento247/composer.json
@@ -106,6 +106,10 @@
         {
             "type": "vcs",
             "url": "https://git.nfq.asia/twint-ag/twint-magento-extension.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://git.nfq.asia/twint-ag/php-sdk.git"
         }
     ],
     "extra": {
