--- a/infra/magento2/composer.json
+++ b/infra/magento2/composer.json
@@ -107,6 +107,10 @@
         {
             "type": "vcs",
             "url": "https://git.nfq.asia/twint-ag/twint-magento-extension.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://git.nfq.asia/twint-ag/php-sdk.git"
         }
     ],
     "extra": {
