--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ variables:
 
 stages:
   - check
+  - release
 
 .base:
   before_script:
@@ -45,28 +46,28 @@ test:
     # Setup PHP
     - spc --php-version "$PHP_VERSION"
       --extensions "bcmath, ctype, curl, dom, fileinfo, filter,gd, hash, iconv, intl, json, libxml, mbstring, openssl, pcre, pdo_mysql, simplexml, soap, sockets, sodium, xsl, tokenizer, xmlwriter, xsl, zlib, libxml"
-    
+
     - composer config --global http-basic.repo.magento.com $MAGENTO_PUBLIC $MAGENTO_PRIVATE
     - composer config --global gitlab-token.git.nfq.asia $GITLAB_ACCESS_TOKEN
-    
+
     # Install dependencies for plugin itself
     - |
       rm -f composer.lock
       composer config prefer-stable true
       composer config minimum-stability dev
       composer install --prefer-dist --no-progress --no-interaction
-      
+
     # Run coding standard
     - ./vendor/bin/ecs --no-progress-bar
-    
+
     # Check codes by rector
     - vendor/bin/rector process --dry-run
-    
+
     # Checkout Magento Community template, and change working directory to magento root folder
     - composer create-project --repository-url=https://repo.magento.com/
       magento/project-community-edition=$MAGENTO_VERSION magento > /dev/null
     - cd magento
-    
+
     - |
       composer config prefer-stable true
       composer config minimum-stability dev
@@ -75,28 +76,28 @@ test:
     - |
       rm -f composer.lock
       composer install --prefer-dist --no-progress --no-interaction
-    
+
     # Remove zinfra folder to avoid issue during di compile
     - rm -rf vendor/twint-ag/twint-magento-extension/zinfra
-  
+
     # Make sure elastic search is ready
     - |
       until curl -s -X GET "http://elasticsearch:9200/_cluster/health" > /dev/null; do
         echo 'Waiting for Elasticsearch to be ready...'
         sleep 5
       done
-      
+
     - bin/magento setup:install --base-url=http://ci.magento.com --backend-frontname=admin --language=en_GB --timezone=Europe/Berlin
       --currency=CHF --db-host=mysql --db-name=$MYSQL_DATABASE --db-user=root --db-password=$MYSQL_ROOT_PASSWORD --use-secure=0
       --base-url-secure=0 --use-secure-admin=0 --admin-firstname=First --admin-lastname=Last --admin-email=admin@magento.com
       --admin-user=admin --admin-password=passw0rd --search-engine=elasticsearch7 --elasticsearch-enable-auth=1
       --elasticsearch-host=http://elasticsearch --elasticsearch-username=elastic --elasticsearch-password=e_password
       --elasticsearch-index-prefix=magento2 > /dev/null
-    
+
     - |
       bin/magento cache:clean > /dev/null
       bin/magento cache:flush > /dev/null
-      
+
     - bin/magento module:disable Twint_Magento
     - bin/magento module:enable Twint_Magento
     - bin/magento setup:upgrade | grep Twint
@@ -107,3 +108,15 @@ test:
     key: $CI_COMMIT_REF_SLUG-${CI_JOB_NAME}
     paths:
       - $CI_PROJECT_DIR/.gitlab-ci-cache
+
+release:
+  only:
+    - tags
+  stage: release
+  image: alpine:3
+  extends: .base
+  variables:
+    GIT_DEPTH: 0
+  script:
+    - apk add --no-cache git openssh bash
+    - ./utils/sync.sh
