--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   "require": {
     "php": ">=8.1",
     "magento/framework": ">=103.0.4",
-    "twint-ag/sdk": "dev-develop",
+    "twint-ag/sdk": "^1.1",
     "symfony/process": "^6.4"
   },
   "require-dev": {
@@ -38,7 +38,7 @@
     "slevomat/coding-standard": "^8.15",
     "rector/rector": "^1.2",
     "phpspec/prophecy-phpunit": "^2.2",
-    "phpunit/phpunit": "^11.3",
+    "phpunit/phpunit": "^10.5",
     "mockery/mockery": "^1.6"
   },
   "repositories": [
