--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,10 @@ test:
   stage: check
   parallel:
     matrix:
-      - MAGENTO_VERSION: [ "2.4.5", "2.4.4" ]
-        PHP_VERSION: [ "8.1" ]
+      - MAGENTO_VERSION: [ "2.4.6" ]
+        PHP_VERSION: [ "8.1", "8.2" ]
+      - MAGENTO_VERSION: [ "2.4.7" ]
+        PHP_VERSION: [ "8.1", "8.2", "8.3" ]
   services:
     - mysql:8.0
     - name: elasticsearch:7.17.22
@@ -32,14 +34,13 @@ test:
   variables:
     ELASTIC_PASSWORD: e_password
     ES_JAVA_OPTS: "-Xms512m -Xmx512m"
-
+   
   script:
     # Update spc (See https://github.com/shivammathur/spc for options)
     - spc -U
 
     # Setup PHP
-    - spc --php-version "$PHP_VERSION"
-      --extensions "bcmath, ctype, curl, dom, fileinfo, filter,gd, hash, iconv, intl, json, libxml, mbstring, openssl, pcre, pdo_mysql, simplexml, soap, sockets, sodium, xsl, tokenizer, xmlwriter, xsl, zlib, libxml"
+    - spc --php-version "$PHP_VERSION" --extensions "bcmath, ctype, curl, dom, fileinfo, filter,gd, hash, iconv, intl, json, libxml, mbstring, openssl, pcre, pdo_mysql, simplexml, soap, sockets, sodium, xsl, tokenizer, xmlwriter, xsl, zlib, libxml"
   
     - composer config repositories.twint-sdk vcs https://git.nfq.asia/twint-ag/php-sdk.git
     - composer config --global http-basic.repo.magento.com $MAGENTO_PUBLIC $MAGENTO_PRIVATE
@@ -54,8 +55,6 @@ test:
 
     # Run coding standard
     - ./vendor/bin/ecs --no-progress-bar
-
-    # Check codes by rector
     - vendor/bin/rector process --dry-run
 
     # Checkout Magento Community template, and change working directory to magento root folder
@@ -68,10 +67,7 @@ test:
       composer config minimum-stability dev
       composer config repositories.twint-sdk vcs https://git.nfq.asia/twint-ag/php-sdk.git
       composer config repositories.twint-extension vcs git@git.nfq.asia:twint-ag/twint-magento-extension.git
-    - composer require twint-ag/twint-magento-extension:dev-$CI_COMMIT_REF_NAME --no-update
-    - |
-      rm -f composer.lock
-      composer install --prefer-dist --no-progress --no-interaction
+      composer require twint-ag/twint-magento-extension:dev-$CI_COMMIT_REF_NAME --no-dev --no-update --no-progress --no-interaction > /dev/null 2>&1
 
     # Remove zinfra folder to avoid issue during di compile
     - rm -rf vendor/twint-ag/twint-magento-extension/zinfra
@@ -83,41 +79,14 @@ test:
         sleep 5
       done
 
-    - bin/magento setup:install
-      --key=abc123
-      --base-url=https://ci.magento.local
-      --language=en_US
-      --timezone=Europe/Berlin
-      --currency=USD
-      --db-host=mysql
-      --db-name=$MYSQL_DATABASE
-      --db-user=root
-      --db-password=$MYSQL_ROOT_PASSWORD
-      --use-secure=1
-      --base-url-secure=https://ci.magento.local
-      --use-rewrites=1
-      --use-secure-admin=1
-      --admin-firstname=First
-      --admin-lastname=Last
-      --admin-email=admin@magento.com
-      --admin-user=admin
-      --admin-password=passw0rd
-      --search-engine=elasticsearch7
-      --elasticsearch-enable-auth=1
-      --elasticsearch-host=http://elasticsearch
-      --elasticsearch-username=elastic
-      --elasticsearch-password=e_password
-      --elasticsearch-index-prefix=magento2
+    - bin/magento setup:install --base-url=http://127.0.0.1/magento2/ --db-host=mysql --db-name=$MYSQL_DATABASE --db-user=root --db-password=$MYSQL_ROOT_PASSWORD --language=en_US --currency=USD  --timezone=America/Chicago --use-rewrites=1 --search-engine=elasticsearch7  --elasticsearch-enable-auth=1 --elasticsearch-host=http://elasticsearch --elasticsearch-username=elastic  --elasticsearch-password=e_password  --elasticsearch-index-prefix=magento2 > /dev/null 2>&1
+  
+    - bin/magento cache:clean && bin/magento cache:flush > /dev/null
 
-    - |
-      bin/magento cache:clean > /dev/null
-      bin/magento cache:flush > /dev/null
-
-    - bin/magento module:disable Twint_Magento
     - bin/magento module:enable Twint_Magento
     - bin/magento setup:upgrade | grep Twint
     - bin/magento setup:di:compile > /dev/null
-    - bin/magento setup:static-content:deploy -f > /dev/null
+#    - bin/magento setup:static-content:deploy -f > /dev/null
 
   cache:
     key: $CI_COMMIT_REF_SLUG-${CI_JOB_NAME}
