--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   "require": {
     "php": ">=8.1",
     "magento/framework": ">=103.0.4",
-    "twint-ag/sdk": "dev-minimal-soap",
+    "twint-ag/sdk": "dev-develop",
     "symfony/process": "^6.4"
   },
   "require-dev": {
