--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "php": ">=8.1",
     "magento/framework": ">=103.0.4",
     "twint-ag/sdk": "dev-develop",
-    "symfony/process": "^6.4"
+    "symfony/process": ">=5.4"
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^12.1",
