--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,10 +80,10 @@ test:
 
     - bin/magento setup:install --base-url=http://127.0.0.1/magento2/ --db-host=mysql --db-name=$MYSQL_DATABASE --db-user=root --db-password=$MYSQL_ROOT_PASSWORD --language=en_US --currency=USD  --timezone=America/Chicago --use-rewrites=1 --search-engine=elasticsearch7  --elasticsearch-enable-auth=1 --elasticsearch-host=http://elasticsearch --elasticsearch-username=elastic  --elasticsearch-password=e_password  --elasticsearch-index-prefix=magento2 > /dev/null
   
-    - composer require twint-ag/twint-magento-extension:dev-$CI_COMMIT_REF_NAME --no-update  | grep twint
+    - composer require twint-ag/twint-magento-extension:dev-$CI_COMMIT_REF_NAME --no-update
     - |
       rm -f composer.lock
-      composer install --prefer-dist --no-progress --no-interaction | grep twint
+      composer install --prefer-dist --no-progress --no-interaction
   
     # Remove zinfra folder to avoid issue during di compile
     - rm -rf vendor/twint-ag/twint-magento-extension/zinfra
