advanced tracking for Magento

--- a/zinfra/magento247/composer.json
+++ b/zinfra/magento247/composer.json
@@ -109,6 +109,10 @@
                     "twint-ag/twint-magento-extension": "1.0.0"
                 }
             }
+        },
+        {
+            "type": "vcs",
+            "url": "https://git.nfq.asia/twint-ag/php-sdk.git"
         }
     ],
     "extra": {
