--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "twint-ag/twint-magento-extension",
-  "version": "1.0.0",
+  "version": "9.9.9-dev",
   "description": "TWINT payment extension for Magento 2",
   "homepage": "https://twint.ch",
   "type": "magento2-module",
