--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   "require": {
     "php": ">=8.1",
     "magento/framework": ">=103.0.4",
-    "twint-ag/sdk": "dev-dev/advanced-tracking",
+    "twint-ag/sdk": "^1.4.0",
     "symfony/process": ">=5.4"
   },
   "require-dev": {
@@ -45,10 +45,6 @@
     {
       "type": "composer",
       "url": "https://repo.magento.com/"
-    },
-    {
-      "type": "vcs",
-      "url": "https://git.nfq.asia/twint-ag/php-sdk.git"
     }
   ],
   "autoload": {
