--- a/infra/magento247/composer.json
+++ b/infra/magento247/composer.json
@@ -50,7 +50,8 @@
         "twint-ag/twint-magento-extension": "dev-master",
         "mageplaza/magento-2-german-language-pack": "dev-master",
         "mageplaza/magento-2-italian-language-pack": "dev-master",
-        "mageplaza/magento-2-french-language-pack": "dev-master"
+        "mageplaza/magento-2-french-language-pack": "dev-master",
+        "mageplaza/module-smtp": "^4.7"
     },
     "autoload": {
         "exclude-from-classmap": [
