--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   "require": {
     "php": ">=8.1",
     "magento/framework": ">=103.0.4",
-    "twint-ag/sdk": "1.4.2",
+    "twint-ag/sdk": "^1.4.0",
     "symfony/validator": ">=6.4"
   },
   "require-dev": {
